--- a/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
+++ b/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
@@ -246,7 +246,7 @@
                                                                 Học bạ
                                                                 (<span id="sp_view_mc_hocba"></span>)
                                                             </label>
-                                                            <div class="col-md-12">
+                                                            <div class="col-md-12 mb-0">
                                                                 <input class="form-control" id="files_hocba" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file học bạ"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
@@ -263,7 +263,7 @@
                                                             <label class="form-label col-12 mb-0">
                                                                 Căn cước công dân (<span id="sp_view_mc_cccd"></span>)
                                                             </label>
-                                                            <div class="col-md-12">
+                                                            <div class="col-md-12 mb-0">
                                                                 <input class="form-control" id="files_cccd" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file CCCD"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
@@ -281,7 +281,7 @@
                                                                 Bằng Tốt nghiệp
                                                                 (<span id="sp_view_mc_bang_tn"></span>)
                                                             </label>
-                                                            <div class="col-md-12">
+                                                            <div class="col-md-12 mb-0">
                                                                 <input class="form-control" id="files_bangtn" multiple="multiple" name="files" type="file" data-val="true" data-val-required="Vui lòng chọn file Bằng TN"
                                                                        accept="application/pdf,.png, .jpeg, .jpg" />
                                                                 <span class="field-validation-valid text-primary" data-valmsg-for="files" data-valmsg-replace="true"></span>
