--- a/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
+++ b/Views/DangKyXetTuyens/DkxtthptqgEdit.cshtml
@@ -340,7 +340,7 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="form-label">Bạn chắc chắn xóa ảnh minh chứng này ?</label>
+                    <span style="color:red">Nếu đồng ý hình ảnh minh chứng sẽ bị xóa. Bạn chắc chắn xóa?</span>
                 </div>
             </div>
             <div class="modal-footer">
